--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,54 @@
-jwt.key=MDk4ZjZiY2RkZjYyMWQzNzNjYWRlNGU4MzI2MjcyM2V3
+auth.interface-key=OPEN_API_2020
+auth.service-key=DS_2020
 
-server.port=8080
+server.port=8100
 
-spring.jackson.default-property-inclusion=non_null
+##开启gzip压缩
+server.compression.enabled=true
+
+spring.jackson.default-property-inclusion=non_empty
 spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
 spring.jackson.time-zone=GMT+8
 
-company.info.server.url=http://39.106.95.155
-company.info.server.detailNode=A1,A2,A3,B1,B2,B3
+uuid.type=snowflake
+
+spring.application.name=dictionary
+
+spring.datasource.url = jdbc:postgresql://192.168.31.4:5432/postgres?currentSchema=dictionary
+spring.datasource.username = postgres
+spring.datasource.password = 1qaz2wsx
+spring.datasource.driverClassName = org.postgresql.Driver
+
+## 连接池最大连接数，默认是10
+spring.datasource.hikari.maximum-pool-size=10
+## 最小空闲连接数量
+spring.datasource.hikari.minimum-idle=2
+## 空闲连接存活最大时间，默认600000（10分钟）
+spring.datasource.hikari.idle-timeout=600000
+## 此属性控制从池返回的连接的默认自动提交行为,默认值：true
+spring.datasource.hikari.auto-commit=false
+## 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+spring.datasource.hikari.max-lifetime=1800000
+## 数据库连接超时时间,默认30秒，即30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=select 1
+spring.datasource.hikari.schema=dictionary
+
+
+spring.flyway.baseline-version=0.1
+spring.flyway.schemas=dictionary
+
+spring.cloud.consul.host=192.168.31.4
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.port=${server.port}
+spring.cloud.consul.discovery.service-name=${spring.application.name}
+spring.cloud.consul.discovery.hostname=192.168.31.3
+
+
+feign.okhttp.enabled=true
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=5000
+feign.client.config.default.logger-level=full
+
+
+logging.level.org.springframework.web=trace
